# sensors_medical_sensor

./: OAT.xml  README.md  README_ZH.md  bundle.json  medical_sensor.gni  ohos.build
frameworks/native/medical_sensor/: BUILD.gn
frameworks/native/medical_sensor/include/: i_medical_client.h  i_medical_service.h  medical_client_stub.h  medical_data_channel.h  medical_service_client.h  medical_service_proxy.h  my_event_handler.h  my_file_descriptor_listener.h
frameworks/native/medical_sensor/src/: medical_client_stub.cpp  medical_data_channel.cpp  medical_service_client.cpp  medical_service_proxy.cpp  my_event_handler.cpp  my_file_descriptor_listener.cpp
frameworks/native/medical_sensor/test/: BUILD.gn
frameworks/native/medical_sensor/test/unittest/common/: BUILD.gn  medical_dfx_test.cpp  medical_native_test.cpp
frameworks/native/medical_sensor/test/unittest/phone/: BUILD.gn  medical_native_test.cpp
interfaces/native/: BUILD.gn
interfaces/native/include/: medical_native_impl.h  medical_native_type.h
interfaces/native/src/: medical_native_impl.cpp
interfaces/native/test/: BUILD.gn
interfaces/native/test/unittest/: medical_native_test.cpp
interfaces/plugin/: BUILD.gn
interfaces/plugin/include/: medical_js.h  medical_napi_utils.h
interfaces/plugin/src/: medical_js.cpp  medical_napi_utils.cpp
interfaces/plugin/test/unittest/: BUILD.gn  medical_js_test.cpp
sa_profile/: 3605.xml  BUILD.gn
services/medical_sensor/: BUILD.gn
services/medical_sensor/hdi_connection/adapter/include/: compatible_connection.h  hdi_connection.h  sensor_event_callback.h
services/medical_sensor/hdi_connection/adapter/src/: compatible_connection.cpp  hdi_connection.cpp  sensor_event_callback.cpp
services/medical_sensor/hdi_connection/hardware/include/: hdi_service_impl.h
services/medical_sensor/hdi_connection/hardware/src/: hdi_service_impl.cpp
services/medical_sensor/hdi_connection/interface/include/: i_sensor_hdi_connection.h  sensor_hdi_connection.h
services/medical_sensor/hdi_connection/interface/src/: sensor_hdi_connection.cpp
services/medical_sensor/include/: client_info.h  fifo_cache_data.h  flush_info_record.h  medical_data_processer.h  medical_dump.h  medical_manager.h  medical_service.h  medical_service_impl.h  medical_service_stub.h
services/medical_sensor/src/: client_info.cpp  fifo_cache_data.cpp  flush_info_record.cpp  medical_data_processer.cpp  medical_dump.cpp  medical_manager.cpp  medical_service.cpp  medical_service_impl.cpp  medical_service_stub.cpp
services/medical_sensor/test/: BUILD.gn
services/medical_sensor/test/unittest/common/: BUILD.gn  client_info_test.cpp
services/medical_sensor/test/unittest/phone/: BUILD.gn  medical_data_processer_test.cpp  medical_proxy_test.cpp  medical_service_impl_test.cpp
utils/: BUILD.gn
utils/include/: death_recipient_template.h  dmd_report.h  medical.h  medical_basic_data_channel.h  medical_basic_info.h  medical_channel_info.h  medical_errors.h  medical_log_domain.h  permission_util.h  report_data_cache.h
utils/src/: dmd_report.cpp  medical.cpp  medical_basic_data_channel.cpp  medical_basic_info.cpp  medical_channel_info.cpp  permission_util.cpp  report_data_cache.cpp
