# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#import("//build/config/ohos/rules.gni")
import("//build/ohos.gni")
ohos_shared_library("medical") {
  include_dirs = [
    "//third_party/node/src",
    "//native_engine",
    "../native/include",
    "//third_party/libuv/include",
    "//utils/native/base/include",
    "./include",
  ]
  defines = [
    "APP_LOG_TAG = \"medicalJs\"",
    "LOG_DOMAIN = 0xD002701",
  ]
  sources = [
    "./src/medical_js.cpp",
    "./src/medical_napi_utils.cpp",
  ]
  deps = [
    "../native:medical_interface_native",
    "//foundation/ace/napi:ace_napi",
    "//utils/native/base:utils",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  relative_install_dir = "module"
  part_name = "medical_sensor"
  subsystem_name = "sensors"
}

group("medical_js_target") {
  deps = [ ":medical" ]
}
