# Copyright (c) 2022 Chipsea Technologies (Shenzhen) Corp., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("./../../medical_sensor.gni")

ohos_shared_library("medical") {
  include_dirs = [
    "$SUBSYSTEM_DIR/interfaces/native/include",
    "$SUBSYSTEM_DIR/interfaces/plugin/include",
    "//third_party/libuv/include",
    "//third_party/node/src",
  ]
  defines = [
    "APP_LOG_TAG = \"medicalJs\"",
    "LOG_DOMAIN = 0xD002701",
  ]
  sources = [
    "src/medical_js.cpp",
    "src/medical_napi_utils.cpp",
  ]
  deps = [ "$SUBSYSTEM_DIR/interfaces/native:medical_interface_native" ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "napi:ace_napi",
  ]
  relative_install_dir = "module"
  part_name = "medical_sensor"
  subsystem_name = "sensors"
}

ohos_static_library("medical_static") {
  include_dirs = [
    "$SUBSYSTEM_DIR/interfaces/native/include",
    "$SUBSYSTEM_DIR/interfaces/plugin/include",
    "//third_party/libuv/include",
    "//third_party/node/src",
  ]
  defines = [
    "APP_LOG_TAG = \"medicalJs\"",
    "LOG_DOMAIN = 0xD002701",
  ]
  sources = [
    "src/medical_js.cpp",
    "src/medical_napi_utils.cpp",
  ]
  deps = [ "$SUBSYSTEM_DIR/interfaces/native:medical_interface_native" ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "napi:ace_napi",
  ]
  part_name = "medical_sensor"
  subsystem_name = "sensors"
}

group("medical_js_target") {
  deps = [ ":medical" ]
}
