# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

SUBSYSTEM_DIR = "//base/sensors/medical_sensor"
ohos_shared_library("libmedical_service") {
  sources = [
    "src/client_info.cpp",
    "src/fifo_cache_data.cpp",
    "src/flush_info_record.cpp",
    "src/medical_data_processer.cpp",
    "src/medical_dump.cpp",
    "src/medical_manager.cpp",
    "src/medical_service.cpp",
    "src/medical_service_impl.cpp",
    "src/medical_service_stub.cpp",
  ]

  include_dirs = [
    "include",
    "$SUBSYSTEM_DIR/frameworks/native/medical_sensor/include",
    "$SUBSYSTEM_DIR/interfaces/native/include",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "$SUBSYSTEM_DIR/utils/include",
    "$SUBSYSTEM_DIR/services/medical_sensor/include",
    "//drivers/peripheral/sensor/interfaces/include",
  ]

  cflags = [ "-Wno-error=inconsistent-missing-override" ]

  deps = [
    "$SUBSYSTEM_DIR/utils:libmedical_utils",
    "//drivers/peripheral/sensor/hal:hdi_sensor",
  ]

  external_deps = [
    "hisysevent_native:libhisysevent",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "permission_standard:libpermissionsdk_standard",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
#    "sensor_device_driver:libsensor_proxy_1.0",
    "utils_base:utils",
  ]
  part_name = "medical_sensor"
  subsystem_name = "sensors"
}

group("medical_service_target") {
  deps = [ ":libmedical_service" ]
}
