# Copyright (c) 2022 Chipsea Technologies (Shenzhen) Corp., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("./../../../medical_sensor.gni")

ohos_unittest("MedicalNativeTest") {
  module_out_path = "sensors/medical_sensor/interfaces"

  sources = [ "unittest/medical_native_test.cpp" ]

  include_dirs = [
    "$SUBSYSTEM_DIR/interfaces/native/include",
    "$SUBSYSTEM_DIR/utils/include",
  ]

  deps = [
    "$SUBSYSTEM_DIR/interfaces/native:medical_ndk_target",
    "$SUBSYSTEM_DIR/utils:libmedical_utils",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]
}

group("unittest") {
  testonly = true
  deps = [ ":MedicalNativeTest" ]
}
