# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#import("//build/config/ohos/rules.gni")
import("//build/ohos.gni")
import("//build/test.gni")
SUBSYSTEM_DIR = "//base/sensors/medical_sensor"
module_output_path = "sensors/medical_sensor/interfaces"
ohos_unittest("MedicalJsTest") {
  module_out_path = module_output_path

  include_dirs = [
    "//third_party/node/src",
    "//native_engine",
    "$SUBSYSTEM_DIR/interfaces/native/include",
    "$SUBSYSTEM_DIR/interfaces/plugin/include",
    "//utils/native/base/include",
    "./include",
    "//third_party/libuv/include",
    "//foundation/ace/napi",
    "//foundation/ace/napi/interfaces/kits",
    "//foundation/ace/napi/native_engine",
    "//foundation/ace/napi/native_engine/impl/quickjs",
  ]
  defines = [
    "APP_LOG_TAG = \"medicalJs\"",
    "LOG_DOMAIN = 0xD002700",
  ]
  sources = [ "medical_js_test.cpp" ]
  deps = [
    "$SUBSYSTEM_DIR/interfaces/native:medical_interface_native",
    "$SUBSYSTEM_DIR/interfaces/plugin:medical",
    "//foundation/ace/napi:ace_napi",
    "//foundation/ace/napi/:ace_napi_quickjs",
    "//third_party/googletest:gtest",
    "//third_party/googletest:gtest_main",
    "//third_party/libuv:uv_static",
    "//third_party/quickjs:qjs",
    "//utils/native/base:utils",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  relative_install_dir = "module"
  part_name = "medical_sensor"
  subsystem_name = "sensors"
}
group("unittest") {
  testonly = true
  deps = [ ":MedicalJsTest" ]
}
